--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+package-lock.json
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -69,6 +70,7 @@ web_modules/
 .env
 .env.*
 !.env.example
+config,local.js
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -137,3 +139,18 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Archivos de sistema
+.DS_Store
+Thumbs.db 
+
+# Logs
+*.log 
+
+#IDEs
+.vscode/
+.idea/
+
+# Archivos temporales
+*.tmp 
+*.swp 
